config-root/namespaces/jx-production/jx-demo/jx-demo-jx-demo-deploy.yaml
# Source: jx-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-demo-jx-demo
  labels:
    draft: draft-app
    chart: "jx-demo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-demo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx-demo-jx-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-demo-jx-demo
    spec:
      serviceAccountName: jx-demo-jx-demo
      containers:
        - name: jx-demo
          image: "10.96.111.254/vaibhavp/jx-demo:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
