config-root/namespaces/jx-production/jx-demo/jx-demo-svc.yaml
# Source: jx-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx-demo
  labels:
    chart: "jx-demo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-demo'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx-demo-jx-demo
